@@ -1,7 +1,7 @@
 //
 // SocketAddressTest.cpp
 //
-// $Id: //poco/1.4/Net/testsuite/src/SocketAddressTest.cpp#3 $
+// $Id: //poco/1.4/Net/testsuite/src/SocketAddressTest.cpp#4 $
 //
 // Copyright (c) 2005-2006, Applied Informatics Software Engineering GmbH.
 // and Contributors.
@@ -140,14 +140,14 @@ void SocketAddressTest::testSocketAddress()
 void SocketAddressTest::testRelationals()
 {
 	SocketAddress sa1("192.168.1.100", 100);
-        SocketAddress sa2("192.168.1.100:100");
+    SocketAddress sa2("192.168.1.100:100");
 	assert (sa1 == sa2);
 
-        SocketAddress sa3("192.168.1.101", "99");
+    SocketAddress sa3("192.168.1.101", "99");
 	assert (sa2 < sa3);
 
-        SocketAddress sa4("192.168.1.100", "102");
-        assert (sa3 < sa4);
+	SocketAddress sa4("192.168.1.101", "102");
+	assert (sa3 < sa4);
 }
 
 
