@@ -19,6 +19,7 @@ Release 1.4.6p2 (2013-06-xx)
 - fixed GH# 194: MessageNotification constructor is inefficient.
 - fixed GH# 189: Poco::NumberParser::tryParse() documentation bug
 - fixed GH# 172: IPv6 Host field is stripped of Brackets in HTTPClientSession
+- fixed GH# 188: Net: SocketAddress operator < unusable for std::map key
 
 
 Release 1.4.6p1 (2013-03-06)
@@ -1836,4 +1837,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#81 $
+$Id: //poco/1.4/dist/CHANGELOG#82 $
